[package]
name = "ownable-core"
version = "1.0.0"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Traits for structs/enums with Cow, which can convert Type<'a> to Type<'static> and more"
repository = "https://github.com/alexkazik/ownable"
license = "MIT OR Apache-2.0"
keywords = ["into_owned", "owned", "no_std"]
categories = ["rust-patterns", "no-std"]
rust-version = "1.63.0"

[features]
default = ['std']
std = []

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
