[package]
name = "ownable"
version = "0.6.2"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Derive macro for structs/enums with Cow, which can convert Type<'a> to Type<'static> and more"
repository = "https://github.com/alexkazik/ownable"
license = "MIT OR Apache-2.0"
keywords = ["into_owned", "derive", "owned", "no_std"]
categories = ["rust-patterns", "no-std"]
rust-version = "1.63.0"

[dependencies]
ownable-core = { version = "1.0", path = "../ownable-core", default-features = false }
ownable-macro = { version = "0.6", path = "../ownable-macro" }

[features]
default = ['std']
std = ["ownable-core/std"]
